changes to template

--- a/css/screen.scss
+++ b/css/screen.scss
@@ -4,9 +4,9 @@
 $pattern: "{{ site.baseurl }}/images/pattern.png";
 $screenshot-buttons: "{{ site.baseurl }}/images/screenshot-buttons.svg";
 
-$brand-color: #FFA715;
+$brand-color: #26ABE2;
 $html-background-color: #222;
-$secondary-brand-color: #FFC461;
+$secondary-brand-color: #6BBDE0;
 $middle-gradient-color: mix($brand-color, $secondary-brand-color, 95%);
 
 // Breakpoints
